# badge

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  compare_codex.md  docker-compose.test.yml
.cargo/: config.toml
benches/: load_test.rs  rule_engine_bench.rs
config/: badge-admin-service.toml  badge-management-service.toml  ci.toml  default.toml  development.toml  event-engagement-service.toml  event-transaction-service.toml  notification-worker.toml  production.toml  unified-rule-engine.toml
crates/badge-admin-service/: Cargo.toml  Dockerfile
crates/badge-admin-service/examples/: gen_password_hash.rs
crates/badge-admin-service/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/badge-admin-service/src/auth/: jwt.rs  mod.rs  password.rs
crates/badge-admin-service/src/dto/: mod.rs  request.rs  response.rs
crates/badge-admin-service/src/handlers/: api_key.rs  asset.rs  auth.rs  auto_benefit.rs  badge.rs  batch_task.rs  benefit.rs  category.rs  dependency.rs  event_type.rs  grant.rs  mod.rs  notification.rs  operation_log.rs  redemption.rs  revoke.rs  rule.rs  series.rs  stats.rs  system_role.rs  system_user.rs  template.rs  user_view.rs
crates/badge-admin-service/src/middleware/: api_key_auth.rs  audit.rs  auth.rs  mod.rs  permission.rs  rate_limit.rs
crates/badge-admin-service/src/models/: mod.rs  operation_log.rs
crates/badge-admin-service/src/worker/: batch_task_worker.rs  expire_worker.rs  mod.rs  scheduled_task_worker.rs
crates/badge-management-service/: Cargo.toml  Dockerfile
crates/badge-management-service/examples/: add_missing_columns.rs  e2e_test.rs  fix_json_format.rs  fix_null_config.rs  fix_types.rs  full_pipeline_test.rs  run_migration.rs  setup_redemption.rs
crates/badge-management-service/src/: error.rs  grpc.rs  lib.rs  main.rs
crates/badge-management-service/src/auto_benefit/: dto.rs  evaluator.rs  mod.rs  rule_cache.rs
crates/badge-management-service/src/benefit/: dto.rs  handler.rs  mod.rs  registry.rs  service.rs
crates/badge-management-service/src/benefit/handlers/: coupon.rs  mod.rs  physical.rs  points.rs
crates/badge-management-service/src/cascade/: dependency_graph.rs  dto.rs  evaluator.rs  mod.rs
crates/badge-management-service/src/lock/: lock_manager.rs  mod.rs
crates/badge-management-service/src/models/: badge.rs  enums.rs  mod.rs  redemption.rs  user_badge.rs
crates/badge-management-service/src/notification/: mod.rs  sender.rs  service.rs  template.rs  types.rs
crates/badge-management-service/src/notification/channels/: app_push.rs  email.rs  mod.rs  sms.rs  wechat.rs
crates/badge-management-service/src/repository/: auto_benefit_repo.rs  badge_repo.rs  dependency_repo.rs  ledger_repo.rs  mod.rs  redemption_repo.rs  traits.rs  user_badge_repo.rs
crates/badge-management-service/src/service/: competitive_redemption.rs  dto.rs  grant_service.rs  mod.rs  query_service.rs  redemption_service.rs  revoke_service.rs
crates/badge-management-service/tests/: badge_flow_test.rs  benefit_integration.rs  cascade_integration.rs  grant_service_test.rs  redemption_service_test.rs  revoke_service_test.rs
crates/event-engagement-service/: Cargo.toml  Dockerfile
crates/event-engagement-service/src/: consumer.rs  error.rs  lib.rs  main.rs  processor.rs  rule_client.rs  rule_mapping.rs
crates/event-transaction-service/: Cargo.toml  Dockerfile
crates/event-transaction-service/src/: consumer.rs  error.rs  lib.rs  main.rs  processor.rs  rule_client.rs  rule_mapping.rs
crates/mock-services/: Cargo.toml  Dockerfile  README.md
crates/mock-services/src/: lib.rs  main.rs
crates/mock-services/src/cli/: commands.rs  mod.rs  runner.rs
crates/mock-services/src/event_generator/: batch.rs  engagement.rs  mod.rs  purchase.rs  traits.rs
crates/mock-services/src/generators/: data_generator.rs  mod.rs
crates/mock-services/src/models/: coupon.rs  mod.rs  order.rs  user.rs
crates/mock-services/src/scenarios/: mod.rs  predefined.rs  scenario.rs
crates/mock-services/src/services/: benefit_service.rs  coupon_service.rs  coupon_service_tests.rs  mod.rs  notification_service.rs  order_service.rs  profile_service.rs
crates/mock-services/src/store/: memory_store.rs  mod.rs
crates/notification-worker/: Cargo.toml  Dockerfile
crates/notification-worker/src/: consumer.rs  error.rs  lib.rs  main.rs  sender.rs  templates.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: badge.proto  lib.rs  rule_engine.proto
crates/shared/: Cargo.toml
crates/shared/src/: cache.rs  circuit_breaker.rs  config.rs  config_watcher.rs  crypto.rs  database.rs  dlq.rs  error.rs  events.rs  grpc_tls.rs  kafka.rs  lib.rs  retry.rs  telemetry.rs  test_utils.rs
crates/shared/src/observability/: metrics.rs  middleware.rs  mod.rs  tracing.rs
crates/shared/src/rules/: loader.rs  mapping.rs  mod.rs  models.rs  validator.rs
crates/shared/tests/: observability_integration.rs  test_utils_test.rs
crates/unified-rule-engine/: Cargo.toml  Dockerfile
crates/unified-rule-engine/benches/: evaluator_bench.rs
crates/unified-rule-engine/src/: compiler.rs  error.rs  evaluator.rs  executor.rs  grpc.rs  lib.rs  main.rs  models.rs  operators.rs  store.rs
crates/unified-rule-engine/src/template/: compiler.rs  mod.rs  models.rs  repository.rs
crates/unified-rule-engine/tests/: integration_test.rs  template_integration.rs
docker/: .env.example  docker-compose.infra.yml  docker-compose.observability.yml
docs/: api-overview.md  deployment.md  development.md  performance-baseline.md  platform-issues-report.md  security-audit.md
migrations/: 20250128_001_init_schema.sql  20250130_001_badge_dependency.sql  20250130_002_cascade_log.sql  20250131_001_cascade_log.sql  20250131_004_seed_templates.sql  20250201_001_user_badge_logs.sql  20250202_001_dynamic_rules.sql  20250202_003_auth_rbac.sql  20250203_001_schema_alignment.sql  20250204_001_rule_templates.sql  20250206_001_benefit_grants.sql  20250207_001_auto_benefit.sql  20250208_001_auth_rbac.sql  20250209_001_fix_password_hash.sql  20250210_001_batch_task_failures.sql  (+12 more)
(+328 files in other folders)
