[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/shared",
    "crates/unified-rule-engine",
    "crates/badge-management-service",
    "crates/badge-admin-service",
    "crates/event-engagement-service",
    "crates/event-transaction-service",
    "crates/notification-worker",
    "crates/mock-services",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Badge Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid", "migrate"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "cluster-async"] }

# Kafka
rdkafka = { version = "0.37", features = ["cmake-build"] }

# Web framework (for admin service)
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
config = "0.14"
async-trait = "0.1"
futures = "0.3"
dashmap = "6.0"
parking_lot = "0.12"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Testing
mockall = "0.13"
tokio-test = "0.4"
fake = { version = "3.0", features = ["derive", "chrono", "uuid"] }
