[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/shared",
    "crates/unified-rule-engine",
    "crates/badge-management-service",
    "crates/badge-admin-service",
    "crates/event-engagement-service",
    "crates/event-transaction-service",
    "crates/notification-worker",
    "crates/mock-services",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
# rust-version = "1.85"
authors = ["Badge Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# gRPC
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "chrono",
    "uuid",
    "migrate",
] }

# Redis
redis = { version = "1.0.3", features = ["tokio-comp", "cluster-async"] }

# Kafka
rdkafka = { version = "0.39.0", features = ["cmake-build"] }

# Web framework (for admin service)
axum = "0.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "timeout",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
config = "0.15.19"
async-trait = "0.1"
futures = "0.3"
dashmap = "6.0"
parking_lot = "0.12"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Testing
mockall = "0.14.0"
tokio-test = "0.4"
fake = { version = "4.4.0", features = ["derive", "chrono", "uuid"] }
criterion = { version = "0.8.1", features = ["html_reports"] }

# 根目录包（用于运行基准测试）
[package]
name = "badge-workspace"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rule_engine = { path = "crates/unified-rule-engine", package = "unified-rule-engine" }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
standalone = []

# 基准测试配置
[[bench]]
name = "rule_engine_bench"
harness = false

[[bench]]
name = "load_test"
harness = false

[profile.bench]
debug = true
