[package]
name = "mock-services"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mock-server"
path = "src/main.rs"

[lib]
name = "mock_services"
path = "src/lib.rs"

[dependencies]
badge-proto = { path = "../proto" }
badge-shared = { path = "../shared" }
tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
fake = { workspace = true }
rand = "0.8"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }
tower = { workspace = true }
