[package]
name = "badge-proto"
version.workspace = true
edition.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
