[package]
name = "badge-shared"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam-utils = "0.8"
dotenvy = "0.15.7"
notify = { workspace = true }
arc-swap = { workspace = true }

# Observability
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
axum = { workspace = true }
hyper = { version = "1.5", features = ["full"] }
http-body-util = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
