[package]
name = "unified-rule-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rule-engine"
path = "src/main.rs"

[lib]
name = "rule_engine"
path = "src/lib.rs"

[dependencies]
badge-proto = { path = "../proto" }
badge-shared = { path = "../shared" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Web framework for health endpoints
axum = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
regex = "1.10"

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
